Fix merge problem in SymbolTable::do_check_concurrent_work

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 12
    • Affects Version/s: 12
    • Component/s: hotspot
    • None
    • b07

      The walk for cleaning packages and modules was moved to another function but left in ClassLoaderData::do_unloading() with the SymbolTable merge.

      Also SymbolTable::do_check_concurrent_work() to SystemDictionary::do_unloading() for future work on concurrent class unloading.

            Assignee:
            Coleen Phillimore
            Reporter:
            Coleen Phillimore
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: