8209541: Fix merge problem in SymbolTable::do_check_concurrent_work

Remerged with previous change to do_unloading.

Reviewed-by: hseigel